# SBM-Hmatrix

./: .gitignore  CMakeLists.txt  README.md
hlibpro-2.8/: .sconsign.dblite  SConstruct  options.cache
hlibpro-2.8/examples/: SConscript  acoustic  acoustic.cc  bem1d  bem1d.cc  bem1d_A.eps  bem1d_LU.eps  bem1d_bct.eps  bem1d_ct.eps  factorize  factorize.cc  helmholtz  helmholtz.cc  laplace  laplace.cc  laplace_A.eps  laplace_bct.eps  laplace_grid.vtk  laplace_rhs.vtk  loglikelihood  loglikelihood.cc  manyrhs  manyrhs.cc  rundag  rundag.cc  sparsealg  sparsealg.cc  sparsebsp  sparsebsp.cc  spectrum  spectrum.cc
hlibpro-2.8/examples/c/: bem1d  bem1d.c  bsp_part  bsp_part.c  cbem1d  cbem1d.c  laplace  laplace.c  sparsealg  sparsealg.c  sparsebsp  sparsebsp.c
hlibpro-2.8/include/: hlib-alg.hh  hlib-base.hh  hlib-bem.hh  hlib-blas.hh  hlib-c-bem.h  hlib-c.h  hlib-cluster.hh  hlib-config.h  hlib-io.hh  hlib-matrix.hh  hlib-misc.hh  hlib-solver.hh  hlib-vector.hh  hlib.hh
hlibpro-2.8/include/hpro/algebra/: TACALU.hh  TCoarsen.hh  TLowRankApx.hh  approx.hh  diag_scale.hh  eval_diag.hh  eval_tri.hh  fft.hh  hca_func.hh  mat_add.hh  mat_conv.hh  mat_fac.hh  mat_inv.hh  mat_mul.hh  mat_mul_core.hh  mat_mul_diag.hh  mat_norm.hh  mul_vec.hh  solve_diag.hh  solve_tri.hh  solve_types.hh  types.hh
hlibpro-2.8/include/hpro/base/: String.hh  System.hh  TByteStream.hh  TPoint.hh  TStreamable.hh  TTruncAcc.hh  TTypeInfo.hh  basetypes.hh  complex.hh  (+13 more)
src/: CMakeLists.txt  main.cpp
src/sbm/: CMakeLists.txt
tbb/: INSTALL_RECEIPT.json
tbb/.brew/: tbb.rb
test/: CMakeLists.txt
(+122 files in other folders)
